Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
- You now can't delete a field if it's used in a layout.
- Icons are now uploaded instead of selected from a list.
- Which types to make these types addable in is now configurable.
- The workflow configuration now allow any number of sections and workspaces.
- The add button in the type management screen now saves changes as well.
- Widget types and field types are now translatable.
Bug fixes:
~~~~~~~~~~
- A label is no longer displayed for fields in view_mode.
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
- 