@@ -1,0 +1,113 @@
+<tal:block define="
+  type_id request/type_id|options/type_id;
+  definitions here/cpstypes_get_definitions;
+  validate python: request.has_key('cpsdirectory_entry_edit_form');
+  edit_request python: validate and request or nothing;
+  delete_allowed python:0;
+  typeob here/portal_types/?type_id;
+  title typeob/title|type_id;
+  expanded_title title;
+  base_layouts definitions/base_layouts;
+  layoutid python:typeob.layouts[len(base_layouts)];
+  layoutob here/portal_layouts/?layoutid;
+  debug nothing;
+  ">
+<metal:block use-macro="here/main_template/macros/master">
+  <metal:block fill-slot="css_slot">
+    <tal:block define="dt_title python:here.Localizer.default('Document Types');
+                       dummy python:request.set('breadcrumb_set',
+                        [{
+                          'id': 'types',
+                          'url': here.portal_url()+'/cpstypes_list',
+                          'longtitle': dt_title,
+                          'title': dt_title,
+                         },
+                         {
+                          'id': 'types',
+                          'url': here.portal_url()+'/cpstypes_edit?type_id='+type_id,
+                          'longtitle': title,
+                          'title': title,
+                        }]);
+                       actions python:actions.update({'object': [
+                         {'id':'edit_type',
+                          'url':base_url+'cpstypes_edit?type_id='+type_id,
+                          'name': 'cpstypes_edit_type',
+                          'category': 'object'},
+                         {'id':'edit_layout',
+                          'url':base_url+'cpstypes_layout_edit?type_id='+type_id,
+                          'name': 'cpstypes_edit_layout',
+                          'category': 'object'},
+                         ]});"                       
+     />
+    <tal:block condition="delete_allowed">
+      <tal:block define="global actions python:
+actions['object'].append({'id':'delete_entry',
+  'url':base_url+'cpsdirectory_entry_delete?type_id='+type_id,
+  'onclick': 'return window.confirm(\''+ here.Localizer.default('description_confirm_delete').encode('ISO-8859-15', 'ignore') +'\')' ,
+  'name': 'cpsdir_label_delete_entry',
+  'category': 'object'})" />
+    </tal:block>
+
+    <link rel="Stylesheet" type="text/css" href=""
+      tal:attributes="href string:${base_url}document.css">
+  </metal:block>
+
+  <metal:block fill-slot="header">
+    <h1><span i18n:translate="" tal:content="title" /></h1>
+  </metal:block>
+
+  <metal:block fill-slot="main"
+    tal:define="widgetids layoutob/keys;
+                layoutdef layoutob/getLayoutDefinition;
+                totcols layoutdef/ncols;
+                rows layoutdef/rows" >
+   <form tal:attributes="action string:${here/portal_url}/cpstypes_layout_modify" 
+     method="POST">
+    <input type="hidden" name="type_id" tal:attributes="value type_id"/> 
+    <table cellspacing="0" cellpadding="2" border="0" width="100%">
+      <tr class="row-normal">
+        <td align="left" valign="top">
+          <div class="form-label">
+            <table border="1">
+              <tr>
+                <td tal:repeat="nr python:range(1,totcols+1)"
+                  tal:content="nr" />
+              </tr>
+              <tr tal:repeat="row rows">
+                <tal:span repeat="cell row">
+                  <td tal:attributes="colspan cell/ncols;"
+                    tal:define="nrow repeat/row/number;
+                                ncell repeat/cell/number;
+                                widget_id cell/widget_id;">
+                    <input type="checkbox" 
+                      tal:attributes="name string:check_${nrow}_${ncell};" />
+                    <select tal:attributes="name string:cell_${nrow}_${ncell};">
+                      <option tal:condition="python:widget_id not in widgetids"
+                        value="" selected>?</option>
+                      <option tal:repeat="wid widgetids"
+                        tal:attributes="value wid;
+                          selected python:wid == widget_id"
+                        tal:content="wid" />
+                    </select>
+                  </td>
+                </tal:span>
+              </tr>
+            </table>
+          </div>
+        </td>
+      </tr>
+      <tr>
+        <td align="left">
+          <input type="submit" name="change" value=" Change " />
+          <input type="submit" name="addrow" value=" Add row " />
+          <input type="submit" name="splitcell" value=" Split cell " />
+          <input type="submit" name="delcell" value=" Delete cell " />
+          <input type="submit" name="widencell" value=" Widen cell " />
+          <input type="submit" name="shrinkcell" value=" Shrink cell " />
+        </td>
+    </tr>
+    </table>
+    </form>
+  </metal:block>
+</metal:block>
+</tal:block>
